--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate && ls -l /app/ && ls -l /app/generated/prisma"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
